fixed horizontal scroll bar

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -52,7 +52,7 @@
   #author,
   #search-button {
     width: 60%;
-    margin-left: 15%;
+    margin-left: 18%;
   }
 }
 
@@ -61,7 +61,7 @@
   #author,
   #search-button {
     width: 60%;
-    margin-left: 15.5%;
+    margin-left: 18%;
   }
   /* history <a> tags */
   .value-link {
@@ -89,11 +89,11 @@
   #author,
   #search-button {
     width: 50%;
-    margin-left: 20%;
+    margin-left: 23%;
   }
   .buttons {
     width: 40%;
-    margin-right: 6.3%;
+    margin-right: 3%;
   }
   .value-link {
     margin: 0 35%;
@@ -105,7 +105,11 @@
   #author,
   #search-button {
     width: 40%;
-    margin-left: 25%;
+    margin-left: 28%;
+  }
+  .buttons {
+    margin-right: 2%;
+    width: 20%;
   }
 
   .carousel-item div {
@@ -127,12 +131,27 @@
     width: 12%;
     margin-left: 12%;
   }
+  .buttons {
+    margin-right: 2%;
+    width: 15%;
+  }
+  .div-form-wrapper,
+  form {
+    width: 98%;
+    /* fixes extending page, thus creating horizontal scroll bar */
+  }
 }
 
 @media screen and (min-width: 1600px) {
   .carousel-item a {
     width: 10%;
     margin-left: 12%;
+  }
+  #title,
+  #author,
+  #search-button {
+    width: 30%;
+    margin-left: 32.7%;
   }
 }
 
